# coro_workstations

./: .gitignore  .gitmodules  README.md
coro_descriptions/: CMakeLists.txt  package.xml
coro_descriptions/kinematics/: ur5e_calibration.yaml
coro_descriptions/meshes/: VentionAssembly_13996_v2.7.SLDASM  VentionAssembly_13996_v2.7.STEP  VentionAssembly_5995_v2.SLDASM  VentionAssembly_5995_v2.STEP  large_vention_table.STEP  small_vention_table.FCStd
coro_descriptions/urdf/common/: 2f_coupling.urdf.xacro  coro_3arms_table.urdf.xacro  coro_large_vention_table.urdf.xacro  coro_small_vention_table.urdf.xacro
coro_descriptions/urdf/workstations/: ur10_workstation.urdf.xacro  ur5_workstation.urdf.xacro  ur5e_workstation.urdf.xacro
coro_workstations/: CMakeLists.txt  coro_workstations.kdev4  package.xml
coro_workstations/.kdev4/: coro_workstations.kdev4
coro_workstations/config/: ur5_hw_ros_controllers.yaml
coro_workstations/launch/: hardware_workstation.launch  launch_gripper.launch  sim_workstation.launch  ur10_workstation.launch  ur5_workstation.launch  ur5e_workstation.launch
coro_workstations/nodes/: test_hw_workstation.cpp  test_sim_workstation.cpp  test_workstation.cpp
coro_workstations/scripts/: .test_move_robot.py  copy_file.sh  test_move_robot.py
ur10_hw_workstation_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10_hw_workstation_moveit_config/config/: ur10_2f85.srdf
ur10_hw_workstation_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur10_2f85_moveit_controller_manager.launch.xml  warehouse.launch
ur10_sim_workstation_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10_sim_workstation_moveit_config/config/: joint_limits.yaml  ur10_2f85.srdf
ur10_sim_workstation_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur10_2f85_moveit_controller_manager.launch.xml  warehouse.launch
ur5_hw_workstation_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_hw_workstation_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5_2f85.srdf
ur5_hw_workstation_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_2f85_moveit_controller_manager.launch.xml  warehouse.launch
ur5_sim_workstation_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_sim_workstation_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  ur5_2f85.srdf
ur5_sim_workstation_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  (+8 more)
ur5_workstation_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_hw_workstation_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_sim_workstation_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5e_workstation_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+83 files in other folders)
