<package>

  <name>coro_workstations</name>
  <version>1.0.0</version>
  <description>
     Launch files to start any CoRo workstations
  </description>
  <author email="ab.alexandre.bernier@gmail.com">Alexandre Bernier</author>
  <maintainer email="ab.alexandre.bernier@gmail.com">Alexandre Bernier</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>rviz_visual_tools</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>rviz_visual_tools</run_depend>
  <run_depend>moveit_setup_assistant</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>coro_descriptions</run_depend>
  <run_depend>ur5_sim_workstation_moveit_config</run_depend>
  <run_depend>ur5_hw_workstation_moveit_config</run_depend>
  <run_depend>robotiq_85_description</run_depend>
  <run_depend>robotiq_85_driver</run_depend>
  <run_depend>robotiq_85_msgs</run_depend>
  <run_depend>robotiq_ft_sensor</run_depend>

</package>
